[tool.poetry]
name = "keyboard-game"
version = "0.1.0"
description = ""
authors = ["Jahongir Qurbonov <qurbonovjahongir17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
